--- a/views/tour.pug
+++ b/views/tour.pug
@@ -5,7 +5,7 @@ block append head
   script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js', crossorigin)
   link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css', rel='stylesheet', crossorigin)
   //v2.9.1
-  script(src='https://js.stripe.com/v3/')
+  //- script(src='https://js.stripe.com/v3/')
 
 
 
