--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,8 +1,10 @@
 extends base
 include _reviewCard
-
 block append head
-  //- script(src='/js/mapbox.js')
+
+  script(src='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.js')
+  link(href='https://api.mapbox.com/mapbox-gl-js/v0.54.0/mapbox-gl.css' rel='stylesheet')
+  //v2.9.1
 
 mixin overviewBox(label, text, icon)
   .overview-box__detail
