--- a/views/base.pug
+++ b/views/base.pug
@@ -21,7 +21,9 @@ html
     // FOOTER
     include _footer
     //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js')
+    script(src="https://js.stripe.com/v3/")
     script(src='/js/mapbox.js')
+
     //- script(src='/js/login.js')
     script(src='/js/bundle.js')
     //- script(src="https://js.stripe.com/v3/")
